# cipher-fortis

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  common.mk  config.mk  decrypt.cpp  encrypt.cpp  main.cpp
.github/workflows/: ci.yml  release.yml
Apps/: EntropyComparison.cpp  Grafiken.cpp  Settings.cpp  Settings.hpp  Statistics.cpp  decrypt.cpp  decryption.cpp  encrypt.cpp  encryption.cpp
Apps/Executables/: Makefile  README.md  Text01.txt
CLI/include/: cli_config.hpp
CLI/src/: cli_config.cpp
Executables/: ErwinSmith.txt  Text00.txt  encrypt.cpp
Source/: AES.cpp  AES.hpp  AES_256.cpp  AES_256.hpp  AES_cipher.c  AESkey.cpp  AESkey.hpp  Bitmap.cpp  Bitmap.hpp  FIPS197_examples.c  File.cpp  File.hpp  FileName.cpp  FileName.hpp  GF256.h  OperationsGF256.hpp  Readme.md  SBox.h  TXT.cpp  TXT.hpp  cipher.c  cipher.h  encryption.cpp  operation_modes.c  operation_modes.h
analysis/: CMakeLists.txt  Makefile
analysis/src/: data_randomness.cpp
cli-tools/: CMakeLists.txt  Makefile
cli-tools/include/: cli_config.hpp
cli-tools/src/: cli_config.cpp
cmake/: BuildTypes.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Coverage.cmake  Cppcheck.cmake  GTest.cmake  Sanitizers.cmake
command-line-tools/: CMakeLists.txt  Makefile  bmp_image_encryptor.cpp
command-line-tools/hsm-encrypt/: hsm_encrypt.cpp
command-line-tools/image-encryption/: bmp_encryptor.cpp  bmp_image_encryptor.cpp  image_encryptor.cpp
core-crypto/: CMakeLists.txt
core-crypto/aes/: CMakeLists.txt  Makefile
core-crypto/aes/include/: block.h  compiler_attrs.h  constants.h  key_expansion.h  operation_modes.h
core-crypto/aes/src/: AES.c  GF256.h  SBox.h  T_tables.h  aes_ni.c  aes_ni.h  constants.c  cpu_features.h  key_expansion.c  operation_modes.c
core-crypto/include/: cipher.hpp  crypto_types.hpp  encryptor.hpp  key.hpp
core-crypto/src/: Makefile
core-crypto/src/core/: cipher.cpp  key.cpp
core-crypto/src/utils/: padding.hpp  print_bytes.hpp
crypto-cli/: Makefile
crypto-cli/include/: cli_config.hpp
crypto-cli/src/: cli_config.cpp
data-encryption/: Makefile
data-encryption/include/: AES.h  constants.h  exception_code.h  operation_modes.h
data-encryption/src/: AES.c  block.c  key_expansion.c  operation_modes.c  word.h
docs/: angular_commit_convention.md
docs/adr/: 001-test-infrastructure-proximity-rule.md
docs/designs/: docs-as-code-workflow.md  test-directory-reorganization.md
docs/plans/: 2026-04-crypto_types_plan-v1.md
file-encryption/include/: bitmap.hpp  textf.hpp
file-handlers/: CMakeLists.txt  Makefile
file-handlers/include/: bitmap.hpp  file_base.hpp  image_factory.hpp  jpeg_image.hpp  png_image.hpp  raster_image.hpp  textf.hpp
file-handlers/src/: bitmap.cpp  file_base.cpp  image_factory.cpp  jpeg_image.cpp  png_image.cpp  raster_image.cpp  stb_impl.cpp  textf.cpp
hsm/: Makefile
hsm-integration/: CMakeLists.txt  Makefile
hsm-integration/include/: hsm_cipher.hpp  hsm_key_handle.hpp
hsm-integration/src/: hsm_cipher.cpp  hsm_key_handle.cpp
hsm/include/: hsm_cipher.hpp  hsm_key_handle.hpp  hsm_session.hpp
hsm/src/: hsm_cipher.cpp  (+2 more)
include/: AES.hpp  AESencryption.hpp  cipher.hpp  constants.hpp  encryptor.hpp  key.hpp
metrics-analysis/: Makefile
other-sources-and-docs/: README.md
src/: File.cpp  GF256.h  Makefile
test-framework/: Makefile
testing/: CMakeLists.txt  Makefile
testing/include/test-encryption/detail/: block_cipher_tester.hpp  memory_callbacks.hpp  type_byte_interface.hpp
testing/src/test-vectors/: common.cpp  fips197_cipher.cpp
tests/: CMakeLists.txt  FIPS197_examples.c  Makefile  README.md
tests/benchmark/: bench_aes.c
tests/include/: NIST_FIPS197_TestVectors.hpp  NIST_SP_800-38A_TestVectors.hpp  asset_factory.hpp  bitmap_asset_factory.hpp  bitmap_fixture.hpp  common_aes_vectors.hpp  file_base_fixture.hpp  file_write_utils.hpp  fips197examples.hpp  fips197keyexpansion_examples.hpp  jpeg_asset_factory.hpp  keyexpansion_examples.hpp  png_asset_factory.hpp  raster_asset_utils.hpp  raster_image_fixture.hpp  system_workflows.hpp  test_framework.hpp  text_asset_factory.hpp
tests/include/test-encryption/: test_encryption_c.hpp
tests/include/test-vectors/: common.hpp  fips197_cipher.hpp  fips197_key_expansion.hpp  sp800_38a_modes.hpp
tests/integration/: test_cli_crypto_config.cpp  test_cpp_c_interface.cpp
tests/src/: NIST_FIPS197_TestVectors.cpp  NIST_SP_800-38A_TestVectors.cpp  asset_factory.cpp  binary_asset_factory.cpp  bitmap_asset_factory.cpp  bitmap_fixture.cpp  common_aes_vectors.cpp  file_base_fixture.cpp  jpeg_asset_factory.cpp  png_asset_factory.cpp  raster_asset_utils.cpp  raster_image_fixture.cpp  system_workflows.cpp  test_environment.cpp  test_framework.cpp  text_asset_factory.cpp
tests/src/test-vectors/: common.cpp  fips197_cipher.cpp  fips197_key_expansion.cpp  keys.cpp  sp800_38a_modes.cpp  stub_data.cpp
tests/support/include/: test_environment.hpp
tests/support/src/: file_write_utils.cpp  raster_asset_utils.cpp
tests/system/: test_bmp_encryptorcpp.cpp  test_file_encryption_workflows.cpp  test_image_encryptorcpp.cpp  test_workflows.cpp  test_workflows.hpp
tests/system/command-line-tools/image-encryption/: test_workflows_bmp_encryptor.cpp
tests/system/support/include/: asset_factory.hpp  binary_asset_factory.hpp  system_workflows.hpp
tests/system/support/src/: asset_factory.cpp  binary_asset_factory.cpp  bitmap_asset_factory.cpp  jpeg_asset_factory.cpp  png_asset_factory.cpp  system_workflows.cpp  text_asset_factory.cpp
tests/test-framework/include/: test_framework.hpp
tests/test-framework/include/test-vectors/: common.hpp  test_vectors.hpp
tests/unit/: test_AES.cpp  test_AESh.cpp  test_aesh.cpp  test_bitmap.cpp  test_bitmaphpp.cpp  test_cipher.cpp  test_cipherh.cpp  test_cipherhpp.cpp  test_file_base.cpp  test_hsmcipher.cpp  test_key.cpp  test_keyhpp.cpp  test_operation_modes.cpp  test_operation_modesh.cpp  test_padding.cpp  test_raster_image.cpp
tests/unit/fixtures/: file_base_fixture.cpp  file_base_fixture.hpp  raster_image_fixture.cpp  raster_image_fixture.hpp
(+37 files in other folders)
